[gd_scene load_steps=5 format=3 uid="uid://ccl0g8iq7clbg"]

[ext_resource type="Texture2D" uid="uid://5o6ttygi5w2m" path="res://icon.png" id="1"]
[ext_resource type="Script" path="res://Enemy.gd" id="2"]

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nm61g"]
size = Vector2(343, 220)

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
position = Vector2(202, 145)
script = ExtResource("2")

[node name="Sprite_2d" type="Sprite2D" parent="."]
texture = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("2")
one_way_collision = true

[node name="Enemyarea" type="Area2D" parent="." groups=["enemy"]]
position = Vector2(16, 117)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemyarea"]
position = Vector2(-16, -109)
shape = SubResource("RectangleShape2D_nm61g")
disabled = true

[node name="Wall_Checks" type="Node2D" parent="."]

[node name="Wall_Raycast_Left" type="RayCast2D" parent="Wall_Checks"]
position = Vector2(-33, -2)
rotation = 1.58381
scale = Vector2(5.00007, 0.945749)
target_position = Vector2(0.148294, 60.2646)

[node name="Wall_Raycast_Right" type="RayCast2D" parent="Wall_Checks"]
position = Vector2(31, -1)
rotation = -1.55894
scale = Vector2(-3.85363, 1.12388)

[node name="Floor_Checks" type="Node2D" parent="."]
position = Vector2(9, 17)

[node name="Floor_Raycast_Left" type="RayCast2D" parent="Floor_Checks"]
position = Vector2(-68, -15)
scale = Vector2(3.64, 1)

[node name="Floor_Raycast_Right" type="RayCast2D" parent="Floor_Checks"]
position = Vector2(47, -15)
scale = Vector2(2.84, 1)
target_position = Vector2(0.352112, 50)

[node name="Player_Tracker_Pivot" type="Node2D" parent="."]
position = Vector2(-18, 27)

[node name="Player_Track_Raycast" type="RayCast2D" parent="Player_Tracker_Pivot"]
position = Vector2(18, -27)
rotation = 0.0134101
scale = Vector2(13.4951, 5.90441)
target_position = Vector2(13.1515, -0.437044)
collision_mask = 3

[node name="Chase_Timer" type="Timer" parent="."]

[node name="attack_delay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Enemyarea" to="." method="_on_enemyarea_body_entered"]
[connection signal="timeout" from="attack_delay" to="." method="_on_attack_delay_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
